# yuhuh

./: .env.sample  .gitignore  Cargo.toml  docker-compose.yml
libs/core/: Cargo.toml
libs/core/src/: config.rs  dummy.rs  error.rs  handler.rs  lib.rs  state.rs
libs/core/src/health/: mod.rs
libs/core/src/middleware/: mod.rs  requestid.rs
libs/core/src/user/: find_user.rs  mod.rs  register_user.rs  state.rs
libs/core/src/user/model/: user.rs
libs/log/: Cargo.toml
libs/log/src/: lib.rs
libs/middleware/: Cargo.toml
libs/middleware/src/: requestid.rs
libs/testutil/: Cargo.toml
libs/testutil/src/: asserts.rs  lib.rs
libs/yuhuh/: Cargo.toml  sqlx.toml
libs/yuhuh/src/: api.rs  config.rs  error.rs  handler.rs  lib.rs  state.rs  test.rs
libs/yuhuh/src/activity/: mod.rs  model.rs  router.rs  state.rs
libs/yuhuh/src/activity/create_activity_entries/: handler.rs  mod.rs  model.rs  repository.rs
libs/yuhuh/src/activity/read_activity_entries/: handler.rs  repository.rs
libs/yuhuh/src/food/: mod.rs  model.rs  router.rs  state.rs
libs/yuhuh/src/food/create_food_entries/: handler.rs  repository.rs
libs/yuhuh/src/food/create_food_entry/: handler.rs  mod.rs  repository.rs
libs/yuhuh/src/food/find_food_entry/: handler.rs  repository.rs
libs/yuhuh/src/food/read_food_entries/: handler.rs  repository.rs
libs/yuhuh/src/health/: mod.rs
libs/yuhuh/src/migrations/: 20250906030505_setup.down.sql  20250906030505_setup.up.sql  20250906030512_user.down.sql  20250906030512_user.up.sql  20250921100406_food.down.sql  20250921100406_food.up.sql  20251019050643_mood.down.sql  20251019050643_mood.up.sql  20251019051139_activity.down.sql  20251019051139_activity.up.sql  mod.rs
libs/yuhuh/src/migrations/test/: create_food_entries.sql  create_food_entry.sql  create_mood_entries.sql  create_mood_entry.sql  find_food_entry.sql  find_user.sql  read_food_entries.sql  read_mood_entries.sql
libs/yuhuh/src/mood/: mod.rs  model.rs  rating.rs  router.rs  state.rs
libs/yuhuh/src/mood/create_assignments/: handler.rs  repository.rs
libs/yuhuh/src/mood/create_mood_entries/: handler.rs  repository.rs
libs/yuhuh/src/mood/create_mood_entry/: handler.rs  repository.rs
libs/yuhuh/src/mood/read_assignments/: handler.rs  repository.rs
libs/yuhuh/src/mood/read_mood_entries/: handler.rs  mod.rs  repository.rs
libs/yuhuh/src/user/: mod.rs  model.rs  router.rs  state.rs
libs/yuhuh/src/user/create_user/: handler.rs  repository.rs
libs/yuhuh/src/user/features/: find_user.rs  mod.rs  old_repository.rs
libs/yuhuh/src/user/features/create_user/: handler.rs  mod.rs  repository.rs
libs/yuhuh/src/user/features/find_user/: handler.rs  repository.rs
libs/yuhuh/src/user/features/find_user/queries/: find_user_by_discord_id.sql  find_user_by_id.sql
libs/yuhuh/src/user/find_user/: handler.rs  repository.rs
libs/yuhuh/tests/: common.rs  mod.rs
libs/yuhuh/tests/features/: base.rs  find_user.rs  mod.rs
migrations/user/: 1_setup.sql
services/apicore/: Cargo.toml
services/apicore/src/: main.rs
services/cmd-yuhuh/: Cargo.toml
services/cmd-yuhuh/src/: main.rs
