[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { path = "../log" }
anyhow = { version = "1.0.99", features = ["backtrace"] }
axum = "0.8.4"
clap = { version = "4.5.45", features = ["derive", "env"] }
full = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-attributes = "0.1.30"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["request-id", "trace"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.2", features = ["util"] }
