[package]
name = "log"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-attributes = { workspace = true }
tracing-serde = { workspace = true  }
tracing-subscriber = { workspace = true, features = ["json", "env-filter", "ansi"] }

[dev-dependencies]
tracing-test = "0.2.5"
