[package]
name = "yuhuh"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { path = "../log" }
middleware = { path = "../middleware" }
anyhow = { version = "1.0.99", features = ["backtrace"] }
axum = { version = "0.8.4", features = ["macros"] }
clap = { version = "4.5.45", features = ["derive", "env"] }
full = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-attributes = "0.1.30"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["request-id", "trace"] }
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.18.0", features = ["serde", "v4", "v7"] }
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
async-trait = "0.1.89"

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.2", features = ["util"] }
