[package]
name = "yuhuh"
version = "0.1.0"
edition = "2024"

[dependencies]
log.workspace = true
middleware.workspace = true
testutil.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
axum = { workspace = true, features = ["macros"] }
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror ={ workspace = true }
tokio = { workspace = true, features = ["full", "sync"] }
tracing = { workspace = true }
tracing-attributes = "0.1.30"
tracing-subscriber = { workspace = true, features = ["json"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["request-id", "trace"] }
validator = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
chrono = { workspace = true, features = ["serde"] }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-native-tls"] }
async-trait = { workspace = true }
pretty_assertions = { workspace = true }


[dev-dependencies]
once_cell = "1.21.3"
http-body-util = "0.1.3"
tower = { version = "0.5.2", features = ["util"] }
