[package]
name = "apicore"
version = "0.1.0"
edition = "2024"

[dependencies]
yuhuh = { path = "../../libs/yuhuh" }
log = { path = "../../libs/log" }
anyhow = { version = "1.0.99", features = ["backtrace"] }
clap = { version = "4.5.45", features = ["derive", "env"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-attributes = "0.1.30"
sqlx = "0.8.6"
