[package]
name = "cmd-yuhuh"
version = "0.1.0"
edition = "2024"

[dependencies]
yuhuh = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
clap = { workspace = true, features = ["derive", "env"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
dotenvy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-attributes = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-native-tls", "derive", "migrate", "macros"]}
